fix scrollbar appearance

--- a/styles/utility.css
+++ b/styles/utility.css
@@ -43,6 +43,7 @@
   padding-top: 120px;
   padding-left: 100px;
   padding-right: calc((100% - 1208px) / 2);
+  padding-bottom: 50px;
   margin-right: 24px;
 }
 
